--- a/OpenGLLearn.vcxproj.filters
+++ b/OpenGLLearn.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="src\HelloOpenGL.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\CommonFunction.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
