--- a/OpenGLLearn.vcxproj
+++ b/OpenGLLearn.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Common.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\HelloCubemap.cpp" />
     <ClCompile Include="src\HelloLight.cpp" />
     <ClCompile Include="src\HelloModel.cpp" />
     <ClCompile Include="src\HelloOpenGL.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Common.h" />
     <ClInclude Include="src\filesystem.h" />
+    <ClInclude Include="src\HelloCubemap.h" />
     <ClInclude Include="src\HelloLight.h" />
     <ClInclude Include="src\HelloModel.h" />
     <ClInclude Include="src\HelloOpenGL.h" />
