--- a/OpenGLLearn.vcxproj.filters
+++ b/OpenGLLearn.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="src\HelloCubemap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\HelloGeometryShader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelloInstancing.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloOpenGL.h">
@@ -84,6 +90,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\HelloCubemap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloGeometryShader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloInstancing.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
